# aws_v2

./: .gitignore
00-ssm/: main.tf
01-faers/01-ingestion/: iam.tf  lambda.tf  response.json  s3.tf  ssm.tf  tfplan  variables.tf
01-faers/01-ingestion/src/: lambda_function.py
01-faers/02-processing/: glue.tf  iam.tf  main.tf  s3.tf  ssm.tf  tfplan
01-faers/02-processing/src/: glue_job.py
01-faers/03-bedrock/: bedrock_agent.tf  iam.tf  main.tf  response.json  tfplan
02-lambda-rust/: install.sh
02-lambda-rust/app/: Cargo.toml
02-lambda-rust/app/src/: main.rs
02-lambda-rust/infra/: main.tf  variables.tf
